Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma.

sox-12.18.1
------------

  o The "filter" effect could go into infinite drain mode.  Now
    only drain 1 buffer.  noisered as well.
  o SoX was ignoring user aborts (ctrl-c) if it occured during
    effect drain operations.  This was bad if effects had
    bugs and stuck in infinite loop.
  o Stop SoX from crashing when file type could not be auto
    determined (1417776).
  o Output filenames with multiple '.' confused SoX.  (1417776)
    Christian Hammer
  o Moved to a common set of CLIP routines.  This fixed clipping
    bugs in noisered and mcompand.
  o Stop SoX from crashing on sphere files that contain large text
    strings.  (1430025) Ulf Hamhammar
  o Fix some overflow crashes in aiff handler. (1430024)  Ulf Hamhammar.
  o Under windows, set piped input/output to binary mode (1417794). Marty
  o Fixed broken internal version of strdup().  (1417790) Marty
  o Stop infinite loop when reading MP3's with a tag size of
    exactly 8192 bytes.  (1417511) Hans Fugal
  o Fix typo in stlib.dsp for loading in Visual Studio 6.
  o Fixed problems in silence effect related to removing multiple
    periods of silence from the middle of the sound file.
  o Reduced the window size greatly on the silence effect to
    prevent leaving in silence that looked like noise still based
    on RMS values.
  o Prevent infinite loop in pitch effect from uninitialize variable.
    Frank Heckenbach
  o Prevent crashes when printing error mesages (1447239)
  o Added makefile and support files to compile using Open Watcom
    compiler.  (1417798) Marty
  o Stop calling flow() on effects that returned EOF during drain().  Allows 
    two back-to-back reverse effects to work.
  o Added support for multiple channels in .dat files. 
    (1366634) tomchristie

sox-12.17.9
-----------

  o Updates to compile under VC6. Jimen Ching