@@ -4,6 +4,15 @@ Change History
 This file contains a list of all changes starting after the release of
 sox-11gamma.
 
+sox-12.18.2
+-----------
+  o Adding in debain's disk full fix (#313206).
+  o Finally got rid of reference to cleanup() function in
+    library.  Applications are now required to detect
+    all failures from return codes and cleanup as they
+    want.
+
+
 sox-12.18.1
 ------------
 
@@ -21,7 +30,8 @@ sox-12.18.1
   o Stop SoX from crashing on sphere files that contain large text
     strings.  (1430025) Ulf Hamhammar
   o Fix some overflow crashes in aiff handler. (1430024)  Ulf Hamhammar.
-  o Under windows, set piped input/output to binary mode (1417794). Marty
+  o Under windows, set piped input/output to binary mode (1417794). Martin
+    Panter
   o Fixed broken internal version of strdup().  (1417790) Marty
   o Stop infinite loop when reading MP3's with a tag size of
     exactly 8192 bytes.  (1417511) Hans Fugal
